--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,14 @@
         android:theme="@style/Theme.GameMatch3"
         tools:targetApi="31">
         <activity
+            android:name=".activity.GameActivity"
+            android:exported="false" />
+        <activity
             android:name=".GameSplashActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
