--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    // An efficient, small mobile key-value storage framework developed by WeChat.
+    implementation 'com.tencent:mmkv:1.2.15'
 
     // UI & tools
     implementation 'com.qmuiteam:qmui:2.1.0'
